# jupyter2typst

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  convert_list.md
.github/workflows/: release.yml
src/: body.rs  inc.rs  katex.rs  main.rs  md.rs  typ.rs
src/inc/: md.rs
template/: base.typ  template.md  template.ps1  template.typ
test/: convert.ps1  out.typ  template.typ  test1.ipynb  test1.typ  test1_convert.typ  test2.ipynb  test2.typ  test2_convert.typ  test3.ipynb  test3.typ  test3_convert.typ  test4.ipynb  test4.typ  test4_ast.json  test5.ipynb  test5.typ  test6.ipynb  test6.typ
