[package]
name = "jupyter2typst"
version = "1.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored = ["reqwest/native-tls-vendored"]

[dependencies]
argh = "0.1.13"
base64 = "0.22.1"
image = { version = "0.25.5", default-features = false }
itertools = "0.14.0"
markdown = "1.0.0-alpha.21"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "native-tls"] }
serde_json = "1.0.135"
sha1 = "0.10.6"
url = "2.5.4"
