[package]
name = "jupyter2typst"
version = "1.3.0"
authors = ["8LWXpg"]
description = "Jupyter to Typst converter with template support"
license = "MIT"
repository = "https://github.com/8LWXpg/jupyter2typst"
readme = "README.md"
edition = "2021"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ name }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "zip"
disabled-strategies = ["quick-install", "compile"]

[features]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
argh = "0.1.13"
base64 = "0.22.1"
image = { version = "0.25.6", default-features = false }
itertools = "0.14.0"
markdown = "1.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
url = "2.5.4"
